Fix word overflow on main buttons for small devices

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ src: url('/fonts/Lubalin/LubalinGraphStd-Medium.otf') format('opentype');
 	margin: 15px;
 }
 
+@media only screen and (max-width:440px){
+	.jumbotron .leadspace-buttons p {
+		white-space: normal;
+		width: initial;
+	}
+}
+
 .jumbotron .leadspace-buttons a p b {
 	color: #fff;
 	font-family: 'Lubalin';
@@ -89,7 +96,7 @@ body {
 .navbar
 {
 	height: 40px;
-	
+
 	background: rgb(60,60,60);
 background: -moz-linear-gradient(top, rgba(60,60,60,1) 0%, rgba(19,19,19,1) 100%);
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(60,60,60,1)), color-stop(100%,rgba(19,19,19,1)));
@@ -152,7 +159,7 @@ font-family: Helvetica, Arial, Tahoma, sans-serif;
 .btn-custom-jazz
 {
 	background-color: #1cba11;
-	
+
 	border: 0;
 }
 
@@ -182,8 +189,8 @@ font-family: Helvetica, Arial, Tahoma, sans-serif;
         font-color: #fff;
         color: #fff;
         font-color: #fff;
-        
-} 
+
+}
 
 div.newsImage
 {
@@ -208,12 +215,12 @@ background:url(../imgs/news.jpg) no-repeat;
   filter:alpha(opacity=70);
   /* CSS3 standard */
   opacity:0.7;
-}  
+}
 
 .news a:visited
 {
         color: #FF9933;
-}        
+}
 
 .news a
 {
@@ -243,7 +250,7 @@ background:url(../imgs/news.jpg) no-repeat;
 {
 	font-weight: normal;
 	color: #3399FF;
-}  
+}
 
 #wrapper .updated-card
 {
@@ -273,7 +280,7 @@ background:url(../imgs/news.jpg) no-repeat;
 #wrapper .card
 {
 		margin: 5px;
-		
+
 		/*border-top: 4px solid #ccc;*/
 		height: 150px;
 		text-overflow: ellipsis;
@@ -358,7 +365,7 @@ label.search span
 #repos h4
 {
 	font-size: 16px;
-	
+
 	color: #1b1f30;
 	margin-top: 0;
 	padding: 3px;
@@ -373,7 +380,7 @@ label.search span
 .jumbotron h1
 {
 	font-family: Lubalin;
-	
+
 }
 
 .jumbotron p
@@ -414,7 +421,7 @@ label.search span
 	{
 		width: 24%
 	}
-	
+
 	#updated .col-lg-3
 	{
 		width: 24.25%;
@@ -473,7 +480,7 @@ label.search span
 {
 	padding-left: 10px;
 	color: #aaa;
-	
+
 }
 
 .org a:hover
@@ -507,7 +514,7 @@ margin-right: -2px;
 	color: #fff;
 }
 
-.dw-logo-W 
+.dw-logo-W
 {
 	color: #F19027;
 }
@@ -525,7 +532,7 @@ margin-right: -2px;
 	padding-bottom: 5px;
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
 	opacity: 1;
-	
+
 	-webkit-transition: all .2s ease;
 	-moz-transition: all .2s ease;
 	-o-transition: all .2s ease;
